--- a/templates/login.html
+++ b/templates/login.html
@@ -5,19 +5,30 @@ Log In
 {% endblock %}
 
 {% block main %}
-<form action="/login" method="post">
-    <div class="mb-3">
-        <input autocomplete="off" autofocus
-            class="form-control mx-auto w-auto"
-            id="username" name="username"
-            placeholder="Username" type="text">
+<form action="/login" method="post" class="flex items-center justify-center p-12">
+    <div class="border border-green-300 p-8 rounded-2xl flex flex-col gap-8 w-3/4 sm:w-1/3">
+        <div>
+            <p class="text-black font-bold text-xl text-center">Login</p>
+        </div>
+        <div>
+            <label for="username" class="block text-slate-500">Username</label>
+            <input type="text" name="username" id="username" placeholder="Enter your username"
+                class="bg-slate-200 outline-none p-2 border border-purple-600 rounded-lg focus:border-2 focus:border-purple-800 focus:bg-slate-300 w-full"
+                required pattern="[a-zA-Z][a-zA-Z0-9]+">
+        </div>
+        <div>
+            <label for="password" class="block text-slate-500">Password</label>
+            <input type="password" name="password" id="password" placeholder="Enter password"
+                class="bg-slate-200 outline-none p-2 border border-purple-600 rounded-lg focus:border-2 focus:border-purple-800 focus:bg-slate-300 w-full"
+                required>
+        </div>
+        <div class="flex items-center justify-center">
+            <button type="submit"
+                class="bg-purple-900 font-bold text-xl text-white p-2 px-12 rounded-2xl">Login</button>
+        </div>
+        <div>
+            <p>Don't have an account? <a href="/register" class="text-purple-800 underline font-bold">Register</a></p>
+        </div>
     </div>
-    <div class="mb-3">
-        <input class="form-control mx-auto w-auto"
-            id="password" name="password"
-            placeholder="Password" type="password">
-    </div>
-    <button class="btn btn-primary" type="submit">Log
-        In</button>
 </form>
 {% endblock %}
