--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@ Register
 {% endblock %}
 
 {% block main %}
-<form action="/login" method="post" class="flex items-center justify-center p-12">
+<form action="/register" method="post" class="flex items-center justify-center p-12">
     <div class="border border-green-300 p-8 rounded-2xl flex flex-col gap-8 w-3/4 sm:w-1/3">
         <div>
             <p class="text-black font-bold text-xl text-center">Register for an account</p>
