--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,6 +6,19 @@ Home
 
 {% block main %}
 <div>
-    <p>Home</p>
+    <div class="flex justify-around items-center">
+        <div>
+            <p class="underline text-xl">Cash Total</p>
+            <p></p>
+        </div>
+        <div>
+            <p class="underline text-xl">Stocks Total</p>
+            <p></p>
+        </div>
+        <div>
+            <p class="underline text-xl">Portfolio Total</p>
+            <p></p>
+        </div>
+    </div>
 </div>
 {% endblock %}
