--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,9 +14,21 @@
 <body>
     <nav class="bg-black p-2">
         {% if session["user_id"] %}
-        <a href="/">
-            <img src="../assets/icons/favicon.svg" alt="logo" class="logo">
-        </a>
+        <div class="flex justify-between items-center">
+            <a href="/">
+                <img src="../assets/icons/favicon.svg" alt="logo" class="logo">
+                <p class="text-white text-lg sm:text-xl">Stock Portfolio Manager</p>
+            </a>
+            <a href="/quote" class="text-slate-200">quote</a>
+            <a href="/sell" class="text-slate-200">Sell</a>
+            <a href="/buy" class="text-slate-200">Buy</a>
+            <a href="/history" class="text-slate-200">History</a>
+            <div class="flex gap-4">
+                <img src="../assets/icons/user.svg" alt="user">
+                <a href="/profile">Edit Profile</a>
+                <a href="/login">Log Out</a>
+            </div>
+        </div>
         {% else %}
         <a class="flex items-center justify-center gap-4" href="/">
             <img src="../assets/icons/favicon.svg" alt="logo" class="w-12 h-16">
