--- a/templates/register.html
+++ b/templates/register.html
@@ -14,7 +14,7 @@ Register
             <label for="username" class="block text-slate-500">Username</label>
             <input type="text" name="username" id="username" placeholder="Enter your username"
                 class="bg-slate-200 outline-none p-2 border border-purple-600 rounded-lg focus:border-2 focus:border-purple-800 focus:bg-slate-300 w-full"
-                required pattern="[a-zA-Z][a-zA-Z0-9]+">
+                required pattern="[a-zA-Z][a-z_A-Z0-9]+">
         </div>
         <div>
             <label for="password" class="block text-slate-500">Password</label>
