--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,7 @@
                 <img src="../assets/icons/favicon.svg" alt="logo" class="w-8 h-12 md:w-12 md:h-16">
                 <p class="text-white text-lg sm:text-xl">Stock Portfolio Manager</p>
             </a>
-            <a href="/quote" class="text-slate-200">quote</a>
+            <a href="/quote" class="text-slate-200">Quote</a>
             <a href="/sell" class="text-slate-200">Sell</a>
             <a href="/buy" class="text-slate-200">Buy</a>
             <a href="/history" class="text-slate-200">History</a>
@@ -42,9 +42,8 @@
     </main>
 
     <footer class="bg-black p-2 absolute bottom-0 w-full flex items-center justify-center gap-2">
-        <p class="text-white text-center text-lg sm:text-2xl">©
-            2021 Stock
-            Portfolio Manager</p>
+        <p class="text-white text-center text-lg sm:text-2xl">
+            Data provided by <a href="https://www.iexcloud.io" class="text-purple-500">IEX</a></p>
     </footer>
 
 </body>
