--- a/templates/sell.html
+++ b/templates/sell.html
@@ -22,7 +22,7 @@ Sell
         </div>
         <div>
             <button type="submit"
-                class="bg-purple-800 font-bold text-xl p-2 px-16 rounded-xl sm:text-2xl sm:p-3 sm:px-24">Sell</button>
+                class="bg-purple-800 text-white font-bold text-xl p-2 px-16 rounded-xl sm:text-2xl sm:p-3 sm:px-24">Sell</button>
         </div>
     </form>
 </div>
