--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,7 +26,7 @@
             <div class="flex gap-4 text-white">
                 <img src="../assets/icons/user.svg" alt="user">
                 <a href="/profile">Edit Profile</a>
-                <a href="/login">Log Out</a>
+                <a href="/logout">Log Out</a>
             </div>
         </div>
         {% else %}
