--- a/templates/quote.html
+++ b/templates/quote.html
@@ -7,18 +7,22 @@ Quote
 {% block main %}
 <div class="w-full flex flex-col items-center gap-10">
     <p class="text-center font-bold text-xl">Quote Share Price</p>
-    <form action="/quote" method="post" class="flex flex-col justify-center items-center gap-10 w-2/3 sm:w-3/5">
+    <form id="quoteForm" class="flex flex-col justify-center items-center gap-10 w-2/3 sm:w-3/5">
+        {% if company_name %}
+        <p>{{ company_name }}</p>
+        <p>{{ price }}</p>
+        {% endif %}
         <div class="w-full relative">
             <label for="company_name" class="block text-slate-500 mb-2">Company</label>
             <input type="text" name="company_name" id="company_name" placeholder="Input company name"
                 class="p-2 w-full outline-none border border-purple-600 bg-slate-300 rounded-lg focus:border-purple-800 focus:border-2 focus:bg-slate-400 placeholder:text-white"
-                required>
+                required autocomplete="off">
             <div id="displayNames"
                 class="bg-slate-200 px-2 overflow-auto flex flex-col items-start rounded-b-lg shadow-sm shadow-slate-800">
             </div>
         </div>
         <div>
-            <button type="submit"
+            <button id="submitButton" type="button"
                 class="bg-purple-800 font-bold text-xl p-2 px-16 rounded-xl sm:text-2xl sm:p-3 sm:px-24">Get
                 Quote</button>
         </div>
@@ -26,42 +30,26 @@ Quote
     <script>
         let company_name = document.querySelector("#company_name");
         let listNames = document.querySelector("#displayNames");
+        let submitButton = document.querySelector("#submitButton");
+        let quoteForm = document.querySelector("#quoteForm");
         const createElement = (element) => document.createElement(element);
-        let names = [];
         let matched = [];
-        apiUrl = "https://api.iex.cloud/v1/data/core/REF_DATA?token=pk_71f22086bccd4942b0ad62e770bec9d6";
-
-        async function getNames() {
-            let response = await fetch(apiUrl);
-            let data = await response.json();
-            let names = createNames(data);
-            checkNames(names);
-        }
-
-        getNames();
-        function createNames(data) {
-            for (let i = 0; i < data.length; i++) {
-                names.push(data[i].name);
-            }
-            return names;
-        }
-
 
         function displayNames() {
             while (listNames.firstChild) {
                 listNames.removeChild(listNames.firstChild);
             }
             for (let i = 0; i < 5; i++) {
-                let button = createElement("button");
-                button.setAttribute('type', 'button');
-                button.textContent = matched[i];
-                button.addEventListener('click', () => {
+                let name = createElement("p");
+                name.classList.add("cursor-pointer");
+                name.textContent = matched[i];
+                name.addEventListener('click', () => {
                     company_name.value = matched[i];
                     while (listNames.firstChild) {
                         listNames.removeChild(listNames.firstChild);
                     }
                 });
-                listNames.appendChild(button);
+                listNames.appendChild(name);
             }
         }
 
@@ -82,9 +70,38 @@ Quote
             }
         }
 
-        company_name.addEventListener('keyup', () => {
+        company_name.addEventListener('keyup', (event) => {
+            console.log(event.key);
+            if (event.key === "Backspace" || event.key === "Delete") {
+                while (listNames.firstChild) {
+                    listNames.removeChild(listNames.firstChild);
+                }
+            }
             if (names) {
                 checkNames();
+            }
+        })
+
+        submitButton.addEventListener('click', () => {
+            let validName = false;
+            names.forEach(name => {
+                if (name === company_name.value) {
+                    validName = true;
+                    return;
+                }
+            })
+            if (validName) {
+                quoteForm.setAttribute('action', '/quote');
+                quoteForm.setAttribute('method', 'POST');
+                submitButton.setAttribute('type', 'submit');
+            } else {
+                while (listNames.firstChild) {
+                    listNames.removeChild(listNames.firstChild);
+                }
+                let errorMessage = createElement("p");
+                errorMessage.textContent = "Please enter a valid company name";
+                errorMessage.classList.add("text-red-500");
+                listNames.appendChild(errorMessage);
             }
         })
     </script>
