--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,15 +9,15 @@ Home
     <div class="flex justify-around items-center text-black">
         <div>
             <p class="underline text-xl">Cash Total</p>
-            <p class="text-lg sm:text-xl font-bold">$ {{ cash }}</p>
+            <p class="text-lg sm:text-xl font-bold">${{ cash }}</p>
         </div>
         <div>
             <p class="underline text-xl">Stocks Total</p>
-            <p class="text-lg sm:text-xl font-bold">$2, 859</p>
+            <p class="text-lg sm:text-xl font-bold">${{ stocks_total }}</p>
         </div>
         <div>
             <p class="underline text-xl">Portfolio Total</p>
-            <p class="text-lg sm:text-xl font-bold">$7, 141</p>
+            <p class="text-lg sm:text-xl font-bold">${{ portfolio_total }}</p>
         </div>
     </div>
     <table>
@@ -31,18 +31,20 @@ Home
             </tr>
         </thead>
         <tbody>
+            {% for stock in summary %}
             <tr>
-                <td>Apple Inc</td>
-                <td>AAPL</td>
-                <td>$123</td>
-                <td>3</td>
-                <td>$369</td>
+                <td>{{ stock.name }}</td>
+                <td>{{ stock.ticker }}</td>
+                <td>{{ stock.price }}</td>
+                <td>{{ stock.shares }}</td>
+                <td>{{ stock.total }}</td>
             </tr>
+            {% endfor %}
         </tbody>
         <tfoot>
             <tr>
                 <td colspan="4" class="text-right font-bold">Shares Total</td>
-                <td>$369</td>
+                <td>${{ stocks_total }}</td>
             </tr>
         </tfoot>
     </table>
