--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="../assets/icons/favicon.svg" type="image/x-icon">
 
     <title>Stock Portfolio Manager: {% block title %}{% endblock %}</title>
+
 </head>
 
 <body class="min-h-screen relative bg-white">
@@ -28,6 +29,14 @@
                 <a href="/profile">Edit Profile</a>
                 <a href="/logout">Log Out</a>
             </div>
+            <script>
+                let names;
+                async function getNames() {
+                    names = await fetch('/companies');
+                    names = await names.json();
+                }
+                getNames();
+            </script>
         </div>
         {% else %}
         <a class="flex items-center justify-center gap-4" href="/">
