--- a/templates/sell.html
+++ b/templates/sell.html
@@ -12,7 +12,7 @@ Sell
             <label for="company_name" class="block text-slate-500 mb-2">Company</label>
             <input type="text" name="company_name" id="company_name" placeholder="Input company name"
                 class="p-2 w-full outline-none border border-purple-600 bg-slate-300 rounded-lg focus:border-purple-800 focus:border-2 focus:bg-slate-400 placeholder:text-white"
-                required>
+                required autocomplete="off">
         </div>
         <div class="w-full">
             <label for="shares" class="block text-slate-500 mb-2">No. of shares</label>
