white get quote

--- a/templates/quote.html
+++ b/templates/quote.html
@@ -23,7 +23,7 @@ Quote
         </div>
         <div>
             <button id="submitButton" type="button"
-                class="bg-purple-800 font-bold text-xl p-2 px-16 rounded-xl sm:text-2xl sm:p-3 sm:px-24">Get
+                class="bg-purple-800 font-bold text-xl text-white p-2 px-16 rounded-xl sm:text-2xl sm:p-3 sm:px-24">Get
                 Quote</button>
         </div>
     </form>
