open iex new tab

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -52,8 +52,7 @@
 
     <footer class="bg-black p-2 absolute bottom-0 w-full flex items-center justify-center gap-2">
         <p class="text-white text-center text-lg sm:text-2xl">
-            Data provided by <a target="_blank" href="https://www.iexcloud.io" class="text-purple-500"
-                referrer="no-re">IEX</a></p>
+            Data provided by <a target="_blank" href="https://www.iexcloud.io" class="text-purple-500">IEX</a></p>
     </footer>
 
 </body>
